...
        automaticallyImplyLeading: false,
        centerTitle: false,
        leadingWidth: 66,
        leading: Navigator.canPop(context)
            ? TextButton(
                onPressed: () => Navigator.maybePop(context),
                child: const Text('返回'),
              )
            : null,
        titleSpacing: 8,
        title: titleWidget == null
            ? Text(title)
            : Transform.translate(
...
            onPressed: () => Navigator.push(
              context,
              MaterialPageRoute(
                builder: (_) => SettingsPage(language: language),
              ),
            ),
            child: const Text('设置'),
          ),
        ],
      ),
      body: SafeArea(
        child: Column(
          children: [
...
